--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -22,18 +22,40 @@ basic:
 
         🍕 Мы всегда рады новым резидентам. Хочешь узнать, как стать участником? Жми команду /join
     issue:
-        help: |
-            📮 С помощью этой команды можно анонимно сообщить о какой-либо проблеме в спейсе (чего-то не хватает, что-то не работает, кто-то делает что-то очень неправильное в спейсе).
-            Резиденты обязательно её рассмотрят и постараются решить.
-            Отправить боту проблему можно, например, вот так:
+        space:
+            help: |
+                📮 С помощью этой команды можно #*анонимно#* сообщить о какой-либо проблеме в спейсе (чего-то не хватает, что-то не работает, кто-то делает что-то очень неправильное в спейсе).
+                Резиденты обязательно её рассмотрят и постараются решить.
 
-            #`/issue Плохо работает кондиционер и на первом этаже очень жарко#`
-            #`/issue Закончилась туалетная бумага#`
-            #`/issue Неплохо было бы иметь карту внутренней сети на вики#`
-        sent: 💌 Проблема отправлена резидентам, они обязательно её рассмотрят. Спасибо за помощь нашему сообществу.
-        report: |
-            📩 У вас новая проблема!
-            "{{issue}}"
+                Отправить боту проблему можно, например, вот так:
+                #`/issue Плохо работает кондиционер и на первом этаже очень жарко#`
+                #`/issue Закончилась туалетная бумага#`
+                #`/issue Неплохо было бы иметь карту внутренней сети на вики#`
+
+                Если проблема касается бота, то лучше воспользоваться командой /bug
+            sent: 💌 Проблема отправлена резидентам, они обязательно её рассмотрят. Спасибо за помощь нашему сообществу.
+            report: |
+                📩 У вас новая проблема!
+
+                "{{issue}}"
+        bot:
+            help: |
+                📮 С помощью этой команды можно сообщить о баге в боте. 
+
+                Можно создать новую issue на гитхабе, если такой еще нет. Или можно отправить багрепорт прямо в телеграме, например, вот так:
+                #`/bug Меня не чекинит автоматически, когда я прихожу в спейс#`
+
+                #*Username пользователя будет автоматически добавлен#* к сообщению, чтобы резиденты могли связаться с вами, если им потребуется дополнительная информация.
+
+                Если проблема касается самого спейса или его гостей, то лучше воспользоваться командой /issue
+            sent: 💌 Багрепорт отправлен мейнтейнерам, они обязательно его рассмотрят. Спасибо за помощь нашему сообществу.
+            report: |
+                📩 У {{reporter}} есть появилась проблема с ботом! Возможно баг?
+
+                "{{issue}}"
+        buttons:
+            new: Создать на гитхабе
+            current: Issues на гитхабе
     residents: |
         👥 Вот они, наши великолепные резиденты:
         {{userList}}
@@ -140,6 +162,7 @@ basic:
 
             🔖 Для получения полного списка команд доступных тебе вводи /help. Некоторые команды видны только резидентам.
             📮 Что-то в спейсе не так? Вводи в боте /issue. Это анонимно.
+            🐞 Нашел баг в боте? Вводи /bug.
             🗣 Change bot language / Сменить язык бота - /lang
         buttons:
             status: 📯 Статус
