--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -9,6 +9,7 @@ general:
         yes: ✅ Да
         no: ❌ Нет
         more: 📖 Подробнее
+        readmore: 📚 Читать еще
 basic:
     help: "{{availableCommands}}{{globalModifiers}}"
     about: |
@@ -58,12 +59,12 @@ basic:
             current: Issues на гитхабе
     residents: |
         👥 Вот они, наши великолепные резиденты:
+
         {{userList}}
         🧠 Вы можете обратиться к ним по любому спейсовскому вопросу
     location:
         address: |
-            🗺 Наш адрес: Армения, Ереван, Пушкина 38/18 (вход со двора)
-        caption: 🏫 Вот этот домик, единственный в своем роде
+            🏫 Вот этот домик, единственный в своем роде. Его адрес: Армения, Ереван, Пушкина 38/18 (вход со двора)
     donate: |
         💸 Хакспейс не является коммерческим проектом и существует исключительно на пожертвования участников.
         Мы вносим свой вклад в развитие спейса: оплата аренды и коммуналки, забота о пространстве, помощь в приобретении оборудования.
@@ -520,15 +521,9 @@ service:
             🇷🇺 Привет, {{newMember}}. Выбери свой язык, если ты не бот, иначе не сможешь тут писать :)
         captcha: Тык
         main: |
-            🇬🇧 Добро пожаловать в наш уютный уголок, {{newMember}}
-
-            Я @{{botName}}, бот-менеджер хакерспейса. Ко мне в личку можно зайти пообщаться, чтобы я вкратце о нас рассказал.
-            Не забудь также зайти в наш второй чатик (ссылка в описании этого чата)! Там ты найдешь разные топики по основным проектам спейса, обсуждения будущих мероприятий, новостей, мемов и так далее.
-
-            🎉🎉🎉 Хакерчане, приветствуем {{newMember}}
+            🇬🇧 Добро пожаловать в наш уютный уголок, {{newMember}}. Я бот-менеджер хакерспейса. Заходи ко мне в личку, я вкратце расскажу о нас
         offtopic: |
             🫖 Добро пожаловать в топик чат нашего хакспейса, {{newMember}}
-
             Тут ты найдешь разные топики по основным проектам спейса, обсуждения будущих мероприятий, новостей, мемов и так далее.
             Все, что не подходит топику по тематике, лучше пиши в general, не плоди топики без необходимости и будь зайкой.
             Организационные вопросы и вопросы, касающиеся самого спейса, лучше писать в основном чате @hacker_embassy
@@ -543,6 +538,8 @@ service:
             Загляни еще раз в мои команды /help, теперь тебе доступно много нового. Обрати внимание на /control, открывающий тебе безграничную (ну или не очень) власть над самим спейсом. Используй её с умом.
 
             🎉🎉🎉 Резиденты, поднимите свои сосиски за {{newMember}}
+        buttons:
+            about: 📚 В чат бота
     setlanguage:
         select: 🗣 Выбери язык своего общения с ботом
         success: ✅ Язык установлен как {{language}}
