--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -15,9 +15,9 @@ basic:
     about: |
         🏫 Hacker Embassy (Ереванский Хакерспейс) - это пространство, где собираются единомышленники, увлеченные технологиями и творчеством. Мы вместе работаем над проектами, делимся идеями и знаниями, просто общаемся.
           
-        💻 Ты можешь почитать о нас подробнее на нашем сайте https://hackerembassy.site/
+        💻 Ты можешь почитать о нас подробнее на нашем сайте https://hackem.cc/
 
-        📓 Информацию о наших проектах, оборудовании и правилах мы храним на нашей вики https://wiki.hackerembassy.site/
+        📓 Информацию о наших проектах, оборудовании и правилах мы храним на нашей вики https://wiki.hackem.cc/
 
         🤖 Мой код открыт и свободен, разработка ведётся на гитхабе: https://github.com/hackerembassy/hackerembassy-tg-bot 
 
@@ -195,7 +195,7 @@ basic:
     info:
         text: |
             📚 Тут можно почитать о нас.
-            Если хочешь узнать побольше, не стесняйся, заходи на наш сайт и вики https://hackerembassy.site/
+            Если хочешь узнать побольше, не стесняйся, заходи на наш сайт и вики https://hackem.cc/
         buttons:
             about: 🏠 О спейсе и боте
             join: 🙋‍♀️ Как присоединиться
@@ -329,13 +329,13 @@ embassy:
 
             🚺 Anette от ubershy и cake64
             Документация по нему доступна тут:
-            https://wiki.hackerembassy.site/ru/equipment/anette
+            https://wiki.hackem.cc/ru/equipment/anette
             Веб интерфейс доступен внутри сети спейса по адресу {{anetteApi}}
             Статус принтера можно узнать по команде /anette
 
             🚹 Plumbus от the_mihalich
             Документация по нему доступна тут:
-            https://wiki.hackerembassy.site/ru/equipment/plumbus
+            https://wiki.hackem.cc/ru/equipment/plumbus
             Веб интерфейс доступен внутри сети спейса по адресу {{plumbusApi}}
             Статус принтера можно узнать по команде /plumbus
         anettestatus: Статус Anette
