--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -182,11 +182,12 @@ basic:
         buttons:
             unlock: 🔑 Замок
             doorbell: 🔔 Звонок
-            downstairs: 📹 I этаж
-            downstairs2: 📹 I этаж 2
+            downstairs: 📹 Ia этаж
+            downstairs2: 📹 Ib этаж
             kitchen: 📹 Кухня
             upstairs: 📹 II этаж
             outdoors: 📹 Вход
+            facecontrol: 📹 Лицо
             printers: 📹 Принтеры
             superstatus: 🩻 Суперстатус
             conditioner: ❄️ Кондей
@@ -285,6 +286,7 @@ embassy:
             kitchen: Кухня
             upstairs: Второй этаж
             outdoors: Входная дверь
+            facecontrol: Лицо
             printers: Принтерная
         fail: |
             ⚠️ {{camLocationName}}: Камера пока недоступна
@@ -382,6 +384,11 @@ embassy:
             🗣 С помощью этой команды можно сказать что-нибудь на динамике в спейсе, например #`/say Привет, хакеры#`
         success: 🗣 Сообщение отправлено на динамик
         fail: ⚠️ Не получилось сказать
+    text:
+        help: |
+            🗣 С помощью этой команды можно отправить текст на лед матрицу спейса, например #`/text Привет, хакеры#`
+        success: 🗣 Сообщение отправлено на матрицу
+        fail: ⚠️ Не получилось отправить сообщение
     play:
         help: 🗣 С помощью этой команды можно воспроизвести любой звук по ссылке
         success: 🗣 Звук отправлен на динамик
