--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -766,7 +766,7 @@ topics:
             🙅‍♀️ Ты не подписан на топик {{topic}}
 
             📟 Мои подписки - /subscriptions
-        fail: ⚠️ Не удалось отписаться от топика {{topic}}
+        fail: ⚠️ Не удалось отписаться от топика {{topic}}. А ты точно был подписан?
     add:
         success: 📭 Топик {{topic}} добавлен
         exists: 👌 Топик {{topic}} уже существует
