--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -1,6 +1,7 @@
 general:
     error: Что-то пошло не так
     chatnotallowed: ⚠️ Команда доступна только в групповых чатах спейса
+    nouser: ⚠️ Не нашел такого пользователя, пусть он напишет что-нибудь мне в личку
     buttons:
         menu: 🏠 Меню
         back: ↩️ Назад
