--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -500,10 +500,10 @@ funds:
 
             🛂 Передать донат можно командами:
             #`/tocab id#` - Отдельный донат Кабу по id
-            #`/tocaball fund_name#` - Все донаты Кабу с определенного сбора
-            #`/tocaball#` - Вообще все донаты Кабу (осторожно)
             #`/tonick id#` - Отдельный донат Коле по id
-            #`/paid id#` - Отметить донат оплаченным по id (ушел на цель сбора)
+            #`/tosafe id#` - Отдельный донат Сейфу по id
+            #`/topaid id#` - Отметить донат оплаченным по id (ушел на цель сбора)
+            #`/tosafeall fund_name#` - Все донаты в сейф с определенного сбора
             #`/transferdonation donation_id to username#` (td) - Передать донат другому бухгалтеру
         empty: 📂 На тебе ничего не числится
 needs:
