--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -18,7 +18,7 @@ basic:
           
         💻 Ты можешь почитать о нас подробнее на нашем сайте https://hackem.cc/
 
-        📓 Информацию о наших проектах, оборудовании и правилах мы храним на нашей вики https://wiki.hackem.cc/
+        📓 Информацию о наших проектах, оборудовании и правилах мы храним на нашей вики https://lore.hackem.cc/
 
         🤖 Мой код открыт и свободен, разработка ведётся на гитхабе: https://github.com/hackerembassy/hackerembassy-tg-bot 
 
@@ -333,13 +333,13 @@ embassy:
 
             🚺 Anette от ubershy и cake64
             Документация по нему доступна тут:
-            https://wiki.hackem.cc/ru/equipment/anette
+            https://lore.hackem.cc/s/main/doc/anette-xVZmu2XQSl
             Веб интерфейс доступен внутри сети спейса по адресу {{anetteApi}}
             Статус принтера можно узнать по команде /anette
 
             🚹 Plumbus от the_mihalich
             Документация по нему доступна тут:
-            https://wiki.hackem.cc/ru/equipment/plumbus
+            https://lore.hackem.cc/s/main/doc/plumbus-7ZmS0dhPD6
             Веб интерфейс доступен внутри сети спейса по адресу {{plumbusApi}}
             Статус принтера можно узнать по команде /plumbus
         anettestatus: Статус Anette
