Gender neutral RU locale

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -230,8 +230,8 @@ basic:
             back: ↩️ Назад
 admin:
     addUser:
-        success: ✅ Пользователь {{username}} добавлен как {{roles}}
-        fail: ⚠️ Не удалось добавить пользователя (может он уже есть?)
+        success: ✅ Пользователь {{username}} теперь {{roles}}
+        fail: ⚠️ Не удалось добавить пользователя (может уже есть?)
     getUsers:
         text: |
             👩‍💻 Текущие пользователи:
@@ -242,8 +242,8 @@ admin:
         success: ✅ Роли {{username}} установлены как {{roles}}
         fail: ⚠️ Не удалось обновить роли
     removeUser:
-        success: 🗑 Пользователь {{username}} удален
-        fail: ⚠️ Не удалось удалить пользователя (может его и не было?)
+        success: 🗑 Удалил {{username}}
+        fail: ⚠️ Не удалось удалить пользователя (может не нашли?)
     messages:
         restricted: "📵 Сорян, нужно быть {{required}} для выполнения этой команды"
 birthday:
@@ -468,12 +468,12 @@ funds:
     transferdonation:
         success: |
             ↪️ Донат [id:{{id}}] передан {{accountant}}
-            {{username}} донатил в сбор {{fund.name}} в размере {{donation.value}} {{donation.currency}}
+            Был донейт от {{username}} в сбор {{fund.name}} в размере {{donation.value}} {{donation.currency}}
         fail: ⚠️ Не удалось передать донат
         nothing: ⚠️ Ничего не передано, пипец
     adddonation:
-        success: 💸 {{username}} задонатил {{value}} {{currency}} в сбор {{fundName}}
-        increased: 💸 {{username}} увеличил свой донат в сбор {{fundName}} еще на {{value}} {{currency}}
+        success: 💸 Новый донейт от {{username}} – {{value}} {{currency}} в сбор {{fundName}}
+        increased: 💸 Донейт от {{username}} в сбор {{fundName}} стал больше на {{value}} {{currency}}
         fail: ⚠️ Не удалось добавить донат (может с валютой или суммой что-то не так?)
     removedonation:
         success: 🗑 Удален донат [id:{{donationId}}]
@@ -508,7 +508,7 @@ funds:
         empty: 📂 На тебе ничего не числится
 needs:
     buy:
-        nothing: 👌 Пока никто ничего не просил
+        nothing: 👌 Вроде ничего не нужно покупать
         pleasebuy: |
             🙏 Кто-нибудь, купите по дороге в спейс:
         byrequest: по просьбе
@@ -516,18 +516,18 @@ needs:
             ℹ️ Можно попросить купить что-нибудь по дороге в спейс с помощью команды #`/buy item_name#`
         helpbought: "✅ Отметить покупку сделанной можно нажав на кнопку ниже:"
         success: |
-            🙏 {{username}} попросил кого-нибудь купить #`{{item}}#` по дороге в спейс.
+            🙏 Нужно купить #`{{item}}#` по дороге в спейс по просьбе {{username}}.
         fail: Не удалось добавить просьбу о покупке
     bought:
         success: |
-            ✅ {{username}} купил #`{{item}}#` в спейс
+            ✅ {{username}}, спасибо за покупку #`{{item}}#` в спейс
         notfound: 🙄 Открытого запроса на покупку с таким именем не нашлось, наверное уже купили
         undo: ❌ Отменить покупку
 service:
     welcome:
         confirm: |
             🇬🇧 Hello {{newMember}}. Select your language if you are not a bot, otherwise you won’t be able to write here :)
-            🇷🇺 Привет, {{newMember}}. Выбери свой язык, если ты не бот, иначе не сможешь тут писать :)
+            🇷🇺 Привет, {{newMember}}. Выбери свой язык, если ты не бот, иначе мы тебя скоро забаним :)
         captcha: Тык
         main: |
             🇬🇧 Добро пожаловать в наш уютный уголок, {{newMember}}. Я бот-менеджер хакерспейса. Заходи ко мне в личку, я вкратце расскажу о нас
@@ -542,7 +542,7 @@ service:
 
             🍑 Members, please /slap our new guest as juicy as you can.
         key: |
-            🌭 Добро пожаловать в резиденты, {{newMember}}. Теперь ты тоже священный хранитель ключа!
+            🌭 Добро пожаловать в резиденты, {{newMember}}. Теперь у тебя есть ключ! All hail {{newMember}}.
 
             Загляни еще раз в мои команды /help, теперь тебе доступно много нового. Обрати внимание на /control, открывающий тебе безграничную (ну или не очень) власть над самим спейсом. Используй её с умом.
 
@@ -693,7 +693,7 @@ status:
         removed: 🗑 Эмодзи удален для юзера {{username}}.
         isset: 🐥 Для юзера {{username}} задан эмодзи {{emoji}}.
         isnotset: 🐥 Эмодзи не задан для юзера {{username}}.
-    statsof: "🕔 {{username}} за время существования бота (с Января 2023) провел в спейсе (на основе отметок)"
+    statsof: "🕔 {{username}} за время существования бота (с Января 2023) провел(-а) в спейсе (на основе отметок)"
     stats:
         start: "🕔 За время существования бота (c января 2023) эти юзеры провели в спейсе (на основе отметок)"
         invaliddates: "🕔 Не могу понять даты, попробуй в формате YYYY-MM-DD"
