--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -128,12 +128,6 @@ basic:
         🧙🏻‍♂️ Обратитесь к любому резиденту спейса, он представит вашу кандидатуру Совету Спейса.
     events:
         text: |
-            🗓 За нашими мероприятиями можно следить в календарике
-            {{calendarLink}}
-            Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
-            Или вообще открой календарь прямо в телеге {{openCalendarInTelegram}}
-            Ближайшие мероприятия можно узнать по команде /upcoming, сегодняшние - по команде /today
-
             🎭 Что у нас происходит: 
             - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
             - Часто по понедельникам в 21.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
@@ -141,7 +135,12 @@ basic:
             - В любой другой день спейс тоже может принять гостей, смотри status спейса, чтобы узнать больше.
 
             💸 Посещения свободные (бесплатные), но любые донаты на помощь нашим проектам и аренду очень приветствуются.
-            Подробнее можно узнать по команде {{donateCommand}}
+        calendar: |
+            🗓 За нашими мероприятиями можно следить в календарике
+            {{calendarLink}}
+            Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
+            Или вообще открой календарь прямо в телеге {{openCalendarInTelegram}}
+            Ближайшие мероприятия можно узнать по команде /upcoming, сегодняшние - по команде /today
         buttons:
             today: 📣 Сегодня
             upcoming: 📆 Ближайшие
@@ -150,8 +149,10 @@ basic:
             🗓 Наши ближайшие мероприятия:
         today: |
             📣 Сегодня в спейсе проходят мероприятия:
+        todaysimple: |
+            Сегодня в спейсе:
         entrance: |
-            🎁 Вход как всегда свободный, но мы будем рады любым донатам на поддержку пространства. Смотри /donate чтобы узнать больше.
+            🎁 Вход как всегда свободный, но мы будем рады любым донатам на поддержку пространства.
         notoday: |
             🏖 Сегодня в спейсе запланированных мероприятий нет. 
 
@@ -573,8 +574,8 @@ status:
         inandout: 👋 А я уже нет
         outandin: 🤝 А я в спейсе
         outandout: 👋 Я тоже не там
-        going: 🚕 Планирую зайти
-        notgoing: 🛌 Уже не планирую
+        going: 🚕 Зайду сегодня
+        notgoing: 🛌 Уже не зайду
         andgoing: 🚕 И я планирую
         refresh: 🔃 Обновить
         repeat: 🔃 Повторить команду
